[package]
name = "rustspeck"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5"
clap = { version = "4.6.1", features = ["unicode", "derive"] }
clap_derive = "4.6.1"
flate2 = "1.1.9"
# GUI backend (gpui-port branch): Zed's gpui instead of floem. The whole viewer
# (src/gui.rs) is ported to gpui's element/entity model; everything else — audio
# decode, spectrogram DSP and the RGBA/PNG rendering — is framework-agnostic and
# unchanged, so the two branches are directly comparable for GUI performance.
gpui = "0.2"
image = "0.25"
lofty = { version = "0.24.0", features = ["serde"] }
png = { version = "0.18.1", features = ["zlib-rs"] }
rayon = "1.12.0"
smallvec = "1"
rustfft = { version = "6.4.1", features = ["wasm_simd"] }
# Trimmed from "all": dropped Matroska (mkv), CAF, and MP1/MP2 to shrink the
# binary. Keeps the common audio formats incl. M4A/AAC (isomp4 + aac) and ALAC.
symphonia = { version = "0.6.0", default-features = false, features = [
    "opt-simd",
    "all-meta",
    "wav",
    "aiff",
    "flac",
    "ogg",
    "mp3",
    "vorbis",
    "pcm",
    "adpcm",
    "isomp4",
    "aac",
    "alac",
] }

[profile.release]
opt-level = "s"     # optimize for size; hot crates overridden to opt-level 3 below
lto = "fat"         # cross-crate dead-code elimination
codegen-units = 1   # better optimization / smaller output
panic = "abort"     # drop unwinding tables
strip = true        # strip symbols

# Keep the spectrogram hot path fully speed-optimized even though the rest of
# the binary is built for size: the FFT kernels (rustfft) and our own DSP loops
# (window multiply, power-spectrum accumulation, dBfs mapping). Both are small in
# the binary, so pinning them to opt-level 3 costs little size but avoids a large
# slowdown on big FFTs.
[profile.release.package.rustfft]
opt-level = 3

[profile.release.package.rustspeck]
opt-level = 3
