[package]
name = "rustspeck"
version = "0.1.0"
edition = "2024"
description = "Audio spectrogram renderer, viewer, and library — PNG/RGBA output via CLI or an optional gpui GUI, with SoX-compatible results."
repository = "https://github.com/rokkhonorg/rustspeck"
readme = "README.md"
# Derived from SoX's spectrogram effect (LGPL-2.1-or-later); see LICENSE. A port
# of LGPL source is a derivative work, so the crate carries the same license.
license = "LGPL-2.1-or-later"

[features]
default = ["gui"]
# The interactive GUI viewer. Pulls in gpui (Zed's GUI framework), an async
# channel for the worker->UI bridge, and lofty for track-metadata display.
# Library consumers that only want image output can `default-features = false`
# to drop this whole tree.
gui = ["dep:gpui", "dep:async-channel", "dep:lofty"]

[dependencies]
clap = { version = "4.6.1", features = ["unicode", "derive"] }
clap_derive = "4.6.1"
flate2 = "1.1.9"
image = "0.25"
png = { version = "0.18.1", features = ["zlib-rs"] }

# --- GUI-only (optional; enabled by the `gui` feature) ---
# Zed's gpui instead of floem. The whole viewer (src/gui.rs) is ported to gpui's
# element/entity model; everything else — audio decode, spectrogram DSP and the
# RGBA/PNG rendering — is framework-agnostic, so the library builds without it.
gpui = { version = "0.2", optional = true }
async-channel = { version = "2.5", optional = true }
lofty = { version = "0.24.0", features = ["serde"], optional = true }
rayon = "1.12.0"
realfft = "3"
smallvec = "1"
rustfft = { version = "6.4.1", features = ["wasm_simd"] }
# Trimmed from "all": dropped Matroska (mkv), CAF, and MP1/MP2 to shrink the
# binary. Keeps the common audio formats incl. M4A/AAC (isomp4 + aac) and ALAC.
symphonia = { version = "0.6.0", default-features = false, features = [
    "opt-simd",
    "all-meta",
    "wav",
    "aiff",
    "flac",
    "ogg",
    "mp3",
    "vorbis",
    "pcm",
    "adpcm",
    "isomp4",
    "aac",
    "alac",
] }
strum = { version = "0.28.0", features = ["derive"] }

[[bench]]
name = "fft_compare"
harness = false     # plain main(); no libtest/criterion harness

[profile.release]
opt-level = "s"     # optimize for size; hot crates overridden to opt-level 3 below
lto = "fat"         # cross-crate dead-code elimination
codegen-units = 1   # better optimization / smaller output
panic = "abort"     # drop unwinding tables
strip = true        # strip symbols

# Keep the spectrogram hot path fully speed-optimized even though the rest of
# the binary is built for size: the FFT kernels (rustfft), the real-FFT
# recombination layer (realfft) and our own DSP loops (window multiply,
# power-spectrum accumulation, dBfs mapping). All are small in the binary, so
# pinning them to opt-level 3 costs little size but avoids a large slowdown on
# big FFTs.
[profile.release.package.rustfft]
opt-level = 3

[profile.release.package.realfft]
opt-level = 3

[profile.release.package.rustspeck]
opt-level = 3
